Introducing imageQuote directive

--- a/h/templates/page_search.html
+++ b/h/templates/page_search.html
@@ -24,6 +24,15 @@
 
           <!-- Annotation -->
 
+            <div class="excerpt"
+                 ng-hide="collapsed">
+              <imagequote target="{{annotation.target}}"
+                          strategy="propotional_limit"
+                          scalesmaller="true"
+                          heightlimit="75"
+                          widthlimit="371"/>
+            </div>
+            
             <!-- Excerpts -->
             <div class="excerpt"
                  ng-repeat="target in thread.message.target"
