Adding imagequote directive to editor.html
Editor will display image thumbnails too.

Fixes #915

--- a/h/templates/editor.html
+++ b/h/templates/editor.html
@@ -1,8 +1,17 @@
 <ul class="sliding-panels">
   <li class="annotator-outer annotator-editor">
     <div class="paper">
+      <div class="excerpt"
+           ng-hide="collapsed">
+        <imagequote target="{{annotation.target}}"
+                    strategy="propotional_limit"
+                    scalesmaller="true"
+                    heightlimit="75"
+                    widthlimit="371"/>
+      </div>
+
       <div class="excerpt" ng-repeat="target in annotation.target">
-        <blockquote ng-bind="target.quote" ng-hide="target.showDiff" />
+        <blockquote ng-bind="target.quote" ng-hide="target.showDiff || !target.quote" />
         <blockquote ng-bind-html="target.trustedDiffHTML" ng-show="target.showDiff" />
         <div class="small pull-right" ng-show="target.diffHTML">
           <input type="checkbox" ng-model="target.showDiff" ng-click="$event.stopPropagation()"> Show differences</input>
