Image annotations in streams

--- a/h/templates/streamviewer.html
+++ b/h/templates/streamviewer.html
@@ -4,28 +4,33 @@
           <li ng-repeat="annotation in annotations track by annotation.id"
               repeat-anim array="annotations"
               class="paper thread stream-list">
-            <div class="excerpt"
-                 ng-hide="view"
+            <div ng-hide="view"
                  ng-click="view=!view">
-              <div>
+              <div class="excerpt">
                 <div>
-                  <div ng-show="annotation.text.length">
-                      <blockquote ng-show="annotation.quoteSource=='document'">
-			{{annotation.quote | elide:140}}
-		      </blockquote>
-                      <blockquote ng-hide="annotation.quoteSource=='document'">
-                        <markdown ng-model="$parent.annotation.quote"
-                                  ng-readonly="true"
-                                  name="quote" />
-		      </blockquote>
+                  <div ng-show="annotation.text.length && annotation.quote.length">
+                    <blockquote ng-show="annotation.quoteSource=='document'">
+                      {{annotation.quote | elide:140}}
+                    </blockquote>
+                    <blockquote ng-hide="annotation.quoteSource=='document'">
+                      <markdown ng-model="$parent.annotation.quote"
+                                ng-readonly="true"
+                                name="quote" />
+                    </blockquote>
                   </div>
+                </div>
+              </div>
+
                   <div class="small domain thread">
+                    <!-- Image annotation -->
+                    <div class="excerpt">
+                      <imagequote target="{{annotation.target}}"
+                                  scale="true"/>
+                    </div>
                     <a href="{{annotation.source}}">{{annotation.source_stripped}}</a>
                     |
                     <a href="{{annotation.uri}}">{{annotation.title}}</a>
                   </div>
-                </div>
-              </div>
             </div>
             <div class="excerpt"
                  ng-show="view"
@@ -40,7 +45,14 @@
                             name="quote" />
                 </blockquote>
               </div>
+
+
               <div class="small domain thread">
+                <!-- Image annotation -->
+                <div class="excerpt">
+                  <imagequote target="{{annotation.target}}"
+                              scale="true"/>
+                </div>
                 <a href="{{annotation.source}}">{{annotation.source_stripped}}</a>
                 |
                 <a href="{{annotation.uri}}">{{annotation.title}}</a>
