Bugfix: wrong target was given to page_search template

--- a/h/templates/page_search.html
+++ b/h/templates/page_search.html
@@ -26,7 +26,7 @@
 
             <div class="excerpt"
                  ng-hide="collapsed">
-              <imagequote target="{{annotation.target}}"
+              <imagequote target="{{thread.message.target}}"
                           strategy="propotional_limit"
                           scalesmaller="true"
                           heightlimit="75"
