--- a/h/templates/page_search.html
+++ b/h/templates/page_search.html
@@ -17,7 +17,7 @@
 
             <div class="excerpt"
                  ng-hide="collapsed">
-              <imagequote target="{{annotation.target}}"
+              <imagequote target="{{thread.message.target}}"
                           strategy="propotional_limit"
                           scalesmaller="true"
                           heightlimit="75"
