ImageQuote directive can autoresize now optionally autoresize
* Currently there is no nice method to catch if an element gets resized and polling is not efficient. So, that's why the sidebar window broadcast a "windowResized" event on every resize.
* The imageQuote directive listens to that event and if autoresize is set then it regenerates the image thunbmail to a size calculated from the $window size.
* Again, the elem.width() method gives back 0 in the directive, so it is not realiable.
* Effect: Dragging the sidebar resizes the image thumbnails.

Fixes #920

--- a/h/templates/page_search.html
+++ b/h/templates/page_search.html
@@ -30,7 +30,8 @@
                           strategy="propotional_limit"
                           scalesmaller="true"
                           heightlimit="75"
-                          widthlimit="371"/>
+                          widthlimit="371"
+                          autoresize="true"/>
             </div>
             
             <!-- Excerpts -->
