--- a/h/templates/viewer.html
+++ b/h/templates/viewer.html
@@ -27,7 +27,8 @@
                         strategy="propotional_limit"
                         scalesmaller="true"
                         heightlimit="75"
-                        widthlimit="371"/>
+                        widthlimit="371"
+                        autoresize="true"/>
           </div>
 
           <!-- Excerpts -->
